--- a/index.html
+++ b/index.html
@@ -43,10 +43,15 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-									<b>Name:</b> Frankie<br>
-									<b>Gender:</b> ♂️ (he/him/his)<br>
-									<b>Age:</b> 21↑<br><br>
-
+									<b>Name</b>: Frankie<br>
+									<b>Alias</b>: foxjar<br>
+									<b>Status</b>: tired<br>
+									<b>Gender</b>: ♂️ (he/him/his)<br>
+									<b>Age</b>: 21↑<br>
+									<b>Likes</b>: sleeping, avocado, tofu, Kitagawa Yusuke, shukita, writing, horror, staying up all night<br>
+									<b>Dislikes</b>: Brussels sprouts, broccoli, cauliflower, being woken up<br>
+									<b>Favourite Food</b>: dishes with fried tofu (teriyaki tofu, tofu pad thai)<br>
+								
 									<img src="/images/bagelboy.png" width="100%">
 
 							</article>
