--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									<b>Age</b>: 21↑<br>
 									<b>Likes</b>: sleeping, avocado, tofu, Kitagawa Yusuke, shukita, writing, horror, staying up all night<br>
 									<b>Dislikes</b>: Brussels sprouts, broccoli, cauliflower, being woken up<br>
-									<b>Favourite Food</b>: dishes with fried tofu (teriyaki tofu, tofu pad thai)<br>
+									<b>Favourite Food</b>: dishes with fried tofu (teriyaki tofu, tofu pad thai)<br><br>
 								
 									<img src="/images/bagelboy.png" width="100%">
 
