--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<b>Status</b>: tired<br>
 									<b>Gender</b>: ♂️ (he/him/his)<br>
 									<b>Age</b>: 21↑<br>
-									<b>Likes</b>: sleeping, avocado, tofu, Kitagawa Yusuke, shukita, writing, horror, staying up all night<br>
+									<b>Likes</b>: sleeping, avocado, tofu, Kitagawa Yusuke, shukita, writing, horror<br>
 									<b>Dislikes</b>: Brussels sprouts, broccoli, cauliflower, being woken up<br>
 									<b>Favourite Food</b>: dishes with fried tofu (teriyaki tofu, tofu pad thai)<br><br>
 								
