--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 									
 									※ Commissions are currently closed, but I'm hoping to have them open again in a few months!<br><br>
 
-									※ Access to my fan-related works doesn't require payment of any sort. All of my works are publicly available (or will be, in the case of WIPs).  </ul>
+									※ Access to my fan-related works doesn't require payment of any sort. 
+									All of my works are publicly available (or will be, in the case of WIPs). 
+									Works originally published in zines are later made available on AO3.</ul>
 							</article>
 
 <!-- You try to run me through! hold on! think again! -->
