--- a/index.html
+++ b/index.html
@@ -58,16 +58,11 @@
 
 						<!-- Interests -->
 							<article id="ts4">
-								<h2 class="major">TS4</h2>
-									<h3>General</h3>
+								<h2 class="major">TS4 Mods</h2>
 										<ul>
 										<li><a href="https://foxjar.dreamwidth.org/12083.html">Terms</a></li>
-									</ul>
-
-									<h3>Mods by Series</h3>
-										<ul>
-										<li><a href="https://foxjar.dreamwidth.org/tag/ts4:+identity+v">Identity V</a></li>
-									</ul>
+										<li><a href="https://foxjar.dreamwidth.org/tag/ts4:+identity+v">Series: Identity V</a></li>
+										</ul>
 
 								</h2>
 
@@ -87,7 +82,8 @@
 										<a href="https://open.spotify.com/user/rhythmmixer" class="button">Spotify</a></li>&nbsp;
 									</ul>
 									
-									※ Commissions are currently closed, but I'm hoping to have them open again in a few months!<br><br>
+									※ Commissions are currently closed, but I'm hoping to have them open again in a few months. 
+									I'm currently aiming for late July.<br><br>
 
 									※ Access to my fan-related works doesn't require payment of any sort. 
 									All of my works are publicly available (or will be, in the case of WIPs). 
