--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<a href="https://open.spotify.com/user/rhythmmixer" class="button">Spotify</a></li>&nbsp;
 									</ul>
 									
-									※ Commissions are currently closed, but I'm hoping to have them open again in a few months. 
+									※ Charity commissions are currently closed, but I'm hoping to have them open again in a few months. 
 									I'm currently aiming for late July.<br><br>
 
 									※ Access to my fan-related works doesn't require payment of any sort. 
