--- a/byf.html
+++ b/byf.html
@@ -15,7 +15,7 @@
     <!--レスポンシブ-->
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/byf/style.css">
     <!--Font Awesome-->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!--jQuery-->
