--- a/byf.html
+++ b/byf.html
@@ -57,9 +57,9 @@
                 <!--ナビ-->
                 <nav>
                     <ul id="navlist">
-                        <li><a href="#about">about</a></li>
-                        <li><a href="#sample">sample tag</a></li>
-                        <li><a href="#bookmark">bookmark</a></li>
+                        <li><a href="https://foxjar.dev/">main</a></li>
+                        <li><a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
+                        <li><a href="https://twitter.com/inaribin">twitter</a></li>
                     </ul>
                 </nav>
                 <!--ナビ-->
