--- a/byf.html
+++ b/byf.html
@@ -72,8 +72,8 @@
 
                 <!--セクション1-->
                 <section class="section1" id="about">
-                    <h1>about</h1>
-                    <p>テンプレートの使用前に必ずお読みください。</p>
+                    <h1></h1>
+                    <p>owo</p>
                     <!--セクション2-->
                     <section class="section2">
                         <h2>about template</h2>
