--- a/byf.html
+++ b/byf.html
@@ -78,12 +78,14 @@
                         <h2>byf</h2>
                         <p><em>em</em></p>
                         <dl class="dl1">
-                            <dt>a</dt>
-                            <dd>b</dd>
-                            <dt>a</dt>
-                            <dd>b</dd>
-                            <dt>a</dt>
-                            <dd>b</dd>
+                            <dt>⛔ bigots, antis, minors 🚫</dt>
+                            <dt>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
+                                Members include followers that I know/trust and for whom I would buy lunch, as Parker from Resident Evil: 
+                                Revelations says.</dt>
+                                <dd>(https://www.youtube.com/watch?v=lytE54PHulY)</dd>
+                            <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
+                                actually three snakes in a frock coat.</dt>
+                            <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me. </dt>
                         </dl>
                         <p><div class="box">
                             <p>装飾ボックス内でのサンプルです。</p>
