--- a/byf.html
+++ b/byf.html
@@ -77,17 +77,13 @@
                     <section class="section2">
                         <h2>byf</h2>
                         <p><div class="box">
-                            <p>装飾ボックス内でのサンプルです。</p>
-                            <ul class="ul2">
-                                <li>レモン</li>
-                                <li>グレープフルーツ</li>
-                                <li>オレンジ</li>
-                            </ul>
-                            <ol>
-                                <li>ストロベリー</li>
-                                <li>ブルーベリー</li>
-                                <li>ラズベリー</li>
-                            </ol>
+                        <p>⛔ bigots, antis, minors 🚫</p>
+                        <p>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
+                            Members include followers that I know/trust and for whom I would buy lunch, as Parker from Resident Evil: 
+                            Revelations says. (https://www.youtube.com/watch?v=lytE54PHulY)</p>
+                        <p>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
+                            actually three snakes in a frock coat.</p>
+                        <p>I won't be following many people back. If this bothers you, please feel free not to interact with me. </p>
                         </div></p>
                     </section>
                     <p class="pagetop"><a href="#all">▲</a></p>
