--- a/byf.html
+++ b/byf.html
@@ -76,15 +76,19 @@
                     <!--セクション2-->
                     <section class="section2">
                         <h2>byf</h2>
-                        <p><div class="box">
-                        <p>⛔ bigots, antis, minors 🚫</p>
-                        <p>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
-                            Members include followers that I know/trust and for whom I would buy lunch, as Parker from Resident Evil: 
-                            Revelations says. (https://www.youtube.com/watch?v=lytE54PHulY)</p>
-                        <p>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
-                            actually three snakes in a frock coat.</p>
-                        <p>I won't be following many people back. If this bothers you, please feel free not to interact with me. </p>
-                        </div></p>
+                        <p><em>( ͡° ͜ʖ ͡°)</em></p>
+                        <dl class="dl1">
+                            <dt>⛔ bigots, antis, minors 🚫</dt>
+                            <dt>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
+                                Members include followers that I know/trust and for whom I would buy lunch, 
+                                <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
+                                Revelations says</a>.</dt>
+                                <dd>(https://www.youtube.com/watch?v=lytE54PHulY)</dd>
+                            <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
+                                actually three snakes in a frock coat.</dt>
+                            <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
+                        </dl>
+
                     </section>
                     <p class="pagetop"><a href="#all">▲</a></p>
                 </section>
