--- a/byf.html
+++ b/byf.html
@@ -79,14 +79,13 @@
                         <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
                             <dt>⛔ bigots, antis, minors 🚫</dt>
-                            <dt>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
+                            <dt>・List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
                                 Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
                                 Revelations says</a>.</dt>
-                                <dd>(https://www.youtube.com/watch?v=lytE54PHulY)</dd>
-                            <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
+                            <dt>・Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
                                 actually three snakes in a frock coat.</dt>
-                            <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
+                            <dt>・I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
                         </dl>
 
                     </section>
