--- a/byf.html
+++ b/byf.html
@@ -78,14 +78,14 @@
                         <h2>byf</h2>
                         <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
-                            <dt>⛔ bigots, antis, minors 🚫</dt>
-                            <dt>・List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content.</dt>
-                                <dd>Members include followers that I know/trust and for whom I would buy lunch, 
+                            ⛔ bigots, antis, minors 🚫<br>
+                            List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content.<br>
+                                Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
-                                Revelations says</a>.</dd>
-                            <dt>・Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
-                                actually three snakes in a frock coat.</dt>
-                            <dt>・I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
+                                Revelations says</a>.<br>
+                            Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
+                                actually three snakes in a frock coat.<br>
+                            I won't be following many people back. If this bothers you, please feel free not to interact with me.
                         </dl>
 
                     </section>
