--- a/byf.html
+++ b/byf.html
@@ -79,12 +79,12 @@
                         <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
                             ⛔ bigots, antis, minors 🚫<br>
-                            List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content.<br>
+                            List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content.<br><br>
                                 Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
-                                Revelations says</a>.<br>
+                                Revelations says</a>.<br><br>
                             Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
-                                actually three snakes in a frock coat.<br>
+                                actually three snakes in a frock coat.<br><br>
                             I won't be following many people back. If this bothers you, please feel free not to interact with me.
                         </dl>
 
