--- a/byf.html
+++ b/byf.html
@@ -51,8 +51,6 @@
 
             <!--ヘッダー-->
             <header>
-                <!--タイトル-->
-                <h1><a href="index.html">Hortensia</a></h1>
 
                 <!--ナビ-->
                 <nav>
@@ -78,7 +76,7 @@
                         <h2>byf</h2>
                         <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
-                            ⛔ bigots, antis, minors 🚫<br>
+                            ⛔ bigots, antis, minors 🚫<br><br>
                             List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content.<br><br>
                                 Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
