--- a/byf.html
+++ b/byf.html
@@ -74,15 +74,19 @@
                     <!--セクション2-->
                     <section class="section2">
                         <h2>byf</h2>
-                        <p><em>( ͡° ͜ʖ ͡°)</em></p>
-                            ⛔ bigots, antis, minors 🚫<br><br>
-                            List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
+                            <p><em>⛔ bigots, antis, minors 🚫</em></p>
+                            <ul class="ul1">
+                            <li>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
                                 Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
-                                Revelations says</a>.<br><br>
-                            Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
-                                actually three snakes in a frock coat.<br><br>
-                            I won't be following many people back. If this bothers you, please feel free not to interact with me.
+                                Revelations says</a>.</li>
+                            <li> Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
+                                actually three snakes in a frock coat.</li>
+                            <li>I won't be following many people back. If this bothers you, please feel free not to interact with me.</li>
+                            <li></li>
+                            <li></li>
+                            <li></a></li>
+                        </ul>
 
                     </section>
                     <p class="pagetop"><a href="#all">▲</a></p>
