--- a/byf.html
+++ b/byf.html
@@ -73,21 +73,15 @@
                     <h1></h1>
                     <!--セクション2-->
                     <section class="section2">
-                        <h2>byf</h2>
-                            <p><em>⛔ bigots, antis, minors 🚫</em></p>
-                            <ul class="ul1">
-                            <li>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
+                        <h2>⛔ bigots, antis, minors 🚫</h2>
+                        <h2>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
                                 Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
-                                Revelations says</a>.</li>
-                            <li> Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
-                                actually three snakes in a frock coat.</li>
-                            <li>I won't be following many people back. If this bothers you, please feel free not to interact with me.</li>
-                            <li></li>
-                            <li></li>
-                            <li></a></li>
-                        </ul>
-
+                                Revelations says</a>.</h2>
+                        <h2>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
+                                actually three snakes in a frock coat.</h2>
+                        <h2>I won't be following many people back. If this bothers you, please feel free not to interact with me.</h2>
+                         
                     </section>
                     <p class="pagetop"><a href="#all">▲</a></p>
                 </section>
