--- a/byf.html
+++ b/byf.html
@@ -70,7 +70,7 @@
 
                 <!--セクション1-->
                 <section class="section1" id="about">
-                    <h1>test</h1>
+                    <h1>test2</h1>
                     <!--セクション2-->
                     <section class="section2">
                         <h2>⛔ bigots, antis, minors 🚫</h2>
