--- a/byf.html
+++ b/byf.html
@@ -70,18 +70,21 @@
 
                 <!--セクション1-->
                 <section class="section1" id="about">
-                    <h1>test3</h1>
+                    <h1>test4</h1>
                     <!--セクション2-->
                     <section class="section2">
-                        <h2>⛔ bigots, antis, minors 🚫</h2>
-                        <h2>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
+                        <h2>byf/h2>
+                        <p><em>( ͡° ͜ʖ ͡°)</em></p>
+                        <dl class="dl1">
+                            <dt>⛔ bigots, antis, minors 🚫</dt>
+                            <dt>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
                                 Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
-                                Revelations says</a>.</h2>
-                        <h2>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
-                                actually three snakes in a frock coat.</h2>
-                        <h2>I won't be following many people back. If this bothers you, please feel free not to interact with me.</h2>
-                         
+                                Revelations says</a>.</dt>
+                            <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
+                                actually three snakes in a frock coat.</dt>
+                            <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
+                       
                     </section>
                     <p class="pagetop"><a href="#all">▲</a></p>
                 </section>
