--- a/byf.html
+++ b/byf.html
@@ -70,10 +70,10 @@
 
                 <!--セクション1-->
                 <section class="section1" id="about">
-                    <h1>test4</h1>
+                    <h1>test5</h1>
                     <!--セクション2-->
                     <section class="section2">
-                        <h2>byf/h2>
+                        <h2>byf</h2>
                         <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
                             <dt>⛔ bigots, antis, minors 🚫</dt>
