--- a/byf.html
+++ b/byf.html
@@ -77,7 +77,7 @@
                         <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
                             <dt>⛔ bigots, antis, minors 🚫</dt>
-                            <dt>List-locked content contains fic excerpts, discussion, and links to fic that contain sexual content. 
+                            <dt>List-locked content contains fic previews and links to stories that contain sexual content. 
                                 Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
                                 Revelations says</a>.</dt>
