--- a/byf.html
+++ b/byf.html
@@ -76,7 +76,7 @@
                         <h2>byf</h2>
                         <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
-                            <dt>⛔ bigots, antis, minors 🚫</dt>
+                            <dt><b>Bigots, antis, and minors will be blocked.</b></dt>
                             <dt>List-locked content contains fic previews and links to stories that contain sexual content. 
                                 Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
