--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 										<a href="https://archiveofourown.org/users/foxjar" class="button">AO3</a></li>&nbsp; 
 										<a href="https://foxjar.dreamwidth.org/" class="button">Dreamwidth</a></li>&nbsp;
 										<a href="https://open.spotify.com/user/rhythmmixer" class="button">Spotify</a></li>&nbsp;
+										<a href="https://twitter.com/inaribin" class="button">Twitter</a>&nbsp;
 									</ul>
 									
 									※ Charity commissions are currently closed, but I'm hoping to have them open again in a few months. 
