--- a/byf.html
+++ b/byf.html
@@ -77,7 +77,7 @@
                         <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
                             <dt><b>Bigots, antis, and minors will be blocked.</b></dt>
-                                    <dd></dd>
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>List-locked content contains fic previews and links to stories that contain sexual content. 
                                 Members include followers that I know/trust and for whom I would buy lunch, 
                                 <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
@@ -85,7 +85,7 @@
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
                                 actually three snakes in a frock coat.</dt>
-                                    <dd></dd>
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
                        
                     </section>
