--- a/byf.html
+++ b/byf.html
@@ -78,15 +78,15 @@
                         <dl class="dl1">
                             <dt><b>Bigots, antis, and minors will be blocked.</b></dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                            <dt>List-locked content contains fic previews and links to stories that contain sexual content. 
-                                Members include followers that I know/trust and for whom I would buy lunch, 
-                                <a href="https://www.youtube.com/watch?v=lytE54PHulY">as Parker from Resident Evil: 
-                                Revelations says</a>.</dt>
+                            <dt>Privatter content includes posts locked to mutuals such as fic previews, 
+                                links to stories that contain sexual content, and some art.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
                                 actually three snakes in a frock coat.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
+                            <dt>Once Fanexus launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</dt>
                        
                     </section>
                     <p class="pagetop"><a href="#all">▲</a></p>
