--- a/byf.html
+++ b/byf.html
@@ -79,7 +79,7 @@
                             <dt><b>Bigots, antis, and minors will be blocked.</b></dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Privatter content includes posts locked to mutuals such as fic previews, 
-                                links to stories that contain sexual content, and some art.</dt>
+                                links to stories that contain sexual content, and art.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
                                 actually three snakes in a frock coat.</dt>
