--- a/byf.html
+++ b/byf.html
@@ -80,7 +80,7 @@
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Privatter content includes posts locked to mutuals such as fic previews, 
                                 links to stories that contain sexual content, and art.</dt>
-                                    <dd>My message box for mutuals is open <a href="https://privatter.net/m/inaribin">here on Privatter</a>. 
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ My message box for mutuals is open <a href="https://privatter.net/m/inaribin">here on Privatter</a>. 
                                         Messages can be sent anonymously.</dd>
                             <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
                                 actually three snakes in a frock coat.</dt>
