--- a/byf.html
+++ b/byf.html
@@ -82,6 +82,7 @@
                                 links to stories that contain sexual content, and art.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ My message box for mutuals is open <a href="https://privatter.net/m/inaribin">here on Privatter</a>. 
                                         Messages can be sent anonymously.</dd>
+                                        <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
                                 actually three snakes in a frock coat.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
