--- a/byf.html
+++ b/byf.html
@@ -55,9 +55,9 @@
                 <!--ナビ-->
                 <nav>
                     <ul id="navlist">
-                        <li><a href="https://foxjar.dev/">main</a></li>
-                        <li><a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
                         <li><a href="https://twitter.com/inaribin">twitter</a></li>
+                        <li><a href="https://poipiku.com/579116/">poipiku</a></li>
+                        <li><a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
                     </ul>
                 </nav>
                 <!--ナビ-->
@@ -78,10 +78,10 @@
                         <dl class="dl1">
                             <dt><b>Bigots, antis, and minors will be blocked.</b></dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                            <dt>Privatter content includes posts locked to mutuals such as fic previews, 
-                                links to stories that contain sexual content, and art.</dt>
-                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ My message box for mutuals is open <a href="https://privatter.net/m/inaribin">here on Privatter</a>. 
-                                        Messages can be sent anonymously.</dd>
+                            <dt>Poipiku content includes posts locked to mutuals such as fic previews and art.</dt>
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
+                                            <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ My message box for mutuals is open <a href="https://privatter.net/m/inaribin">here on Privatter</a>. 
+                                                Messages can be sent anonymously.</dd>
                                         <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
                                 actually three snakes in a frock coat.</dt>
