--- a/byf.html
+++ b/byf.html
@@ -56,6 +56,7 @@
                 <nav>
                     <ul id="navlist">
                         <li><a href="https://twitter.com/inaribin">twitter</a></li>
+                        <li><a href="https://privatter.net/u/inaribin">privatter</a></li>
                         <li><a href="https://poipiku.com/579116/">poipiku</a></li>
                         <li><a href="https://archiveofourown.org/users/foxjar">ao3</a></li>
                     </ul>
@@ -78,7 +79,7 @@
                         <dl class="dl1">
                             <dt><b>Bigots, antis, and minors will be blocked.</b></dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                            <dt>Poipiku content includes posts locked to mutuals such as fic previews and art.</dt>
+                            <dt>Locked content for mutuals only includes fic previews on Privatter and art on Poipiku.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                                             <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ My message box for mutuals is open <a href="https://privatter.net/m/inaribin">here on Privatter</a>. 
                                                 Messages can be sent anonymously.</dd>
