--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
 									<ul class="actions">
 										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 										<a href="https://archiveofourown.org/users/foxjar" class="button">AO3</a></li>&nbsp; 
-										<a href="https://foxjar.dreamwidth.org/" class="button">Dreamwidth</a></li>&nbsp;
-										<a href="https://open.spotify.com/user/rhythmmixer" class="button">Spotify</a></li>&nbsp;
-										<a href="https://twitter.com/inaribin" class="button">Twitter</a>&nbsp;
 									</ul>
 									
 									※ Charity commissions are currently closed, but I'm hoping to have them open again in a few months. 
