--- a/byf.html
+++ b/byf.html
@@ -81,6 +81,7 @@
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Locked content for mutuals only includes fic previews on Privatter and art on Poipiku.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
+                                            <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ Some art content will be viewable by anyone. I'm a mess.</dd>
                                             <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ My message box for mutuals is open <a href="https://privatter.net/m/inaribin">here on Privatter</a>. 
                                                 Messages can be sent anonymously.</dd>
                                         <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
@@ -90,6 +91,8 @@
                             <dt>I won't be following many people back. If this bothers you, please feel free not to interact with me.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Once Fanexus launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</dt>
+                                    <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
+                            <dt>If my account is on private, feel free to request to follow.</dt>
                        
                     </section>
                     <p class="pagetop"><a href="#all">▲</a></p>
