--- a/byf.html
+++ b/byf.html
@@ -81,9 +81,9 @@
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Locked content for mutuals only includes fic previews on Privatter and art on Poipiku.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                                            <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ Some art content will be viewable by anyone. I'm a mess.</dd>
                                             <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ My message box for mutuals is open <a href="https://privatter.net/m/inaribin">here on Privatter</a>. 
                                                 Messages can be sent anonymously.</dd>
+                                            <dd>&nbsp; &nbsp; &nbsp; &nbsp; ※ Some art content will initially be public. I'm a mess.</dd>
                                         <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
                                 actually three snakes in a frock coat.</dt>
