--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 								<h2 class="major">Fic</h2>
 									
 									<ul class="actions">
-										<a href="https://archiveofourown.org/users/foxjar">AO3</a> 
+										<li><a href="https://archiveofourown.org/users/foxjar" class="button primary">AO3</a></li>
 									</ul>
+
 									
 									※ Charity commissions are currently closed, but I'm hoping to have them open again in a few months. 
 									I'm currently aiming for late July.<br><br>
