--- a/index.html
+++ b/index.html
@@ -72,17 +72,14 @@
 							<article id="fic">
 								<h2 class="major">Fic</h2>
 									
-									<ul class="actions">
-										<li><a href="https://archiveofourown.org/users/foxjar" class="button primary">AO3</a></li>
-									</ul>
-
-									
-									※ Charity commissions are currently closed, but I'm hoping to have them open again in a few months. 
-									I'm currently aiming for late July.<br><br>
-
-									※ Access to my fan-related works doesn't require payment of any sort. 
+									<ul class="alt">
+										<li><a href="https://archiveofourown.org/users/foxjar">AO3</a></li>
+										<li>※ Charity commissions are currently closed, but I'm hoping to have them open again in a few months. 
+									I'm currently aiming for late July.</li>
+										<li>※ Access to my fan-related works doesn't require payment of any sort. 
 									All of my works are publicly available (or will be, in the case of WIPs). 
-									Works originally published in zines are later made available on AO3.</ul>
+									Works originally published in zines are later made available on AO3.</li>
+									</ul>
 
 							</article>
 
