--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
 									
 									<ul class="alt">
 										<li>【<a href="https://archiveofourown.org/users/foxjar">Archive of Our Own</a>】</li>
-										<li>※ Charity commissions are currently closed, but I'm hoping to have them open again in a few months. 
-									I'm currently aiming for late July.</li>
+										<li>※ <b>Charity Commission Status</b>: Closed. <a href="https://foxjar.dreamwidth.org/17059.html">More info on my blog here.</a></li>
 										<li>※ Access to my fan-related works doesn't require payment of any sort. 
 									All of my works are publicly available (or will be, in the case of WIPs). 
 									Works originally published in zines are later made available on AO3.</li>
