--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<h2 class="major">Fic</h2>
 									
 									<ul class="alt">
-										<li>【<a href="https://archiveofourown.org/users/foxjar">Archive of Our Own</a>】</li>
+										<li><a href="https://archiveofourown.org/users/foxjar">【Archive of Our Own】</a></li>
 										<li>※ <b>Charity Commission Status</b>: Closed. <a href="https://foxjar.dreamwidth.org/17059.html">More info on my blog here.</a></li>
 										<li>※ Access to my fan-related works doesn't require payment of any sort. 
 									All of my works are publicly available (or will be, in the case of WIPs). 
