--- a/byf.html
+++ b/byf.html
@@ -84,7 +84,7 @@
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>      
                             <dt>If my account is on private, feel free to request to follow.</dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
-                            <dt>Once Fanexus launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</dt>
+                            <dt>※ Once Fanexus launches, I might lock my Twitter and vacate the bluebird hellsite, but we'll see.</dt>
                        
                     </section>
                     <p class="pagetop"><a href="#all">▲</a></p>
