--- a/byf.html
+++ b/byf.html
@@ -75,7 +75,7 @@
                         <h2>byf</h2>
                         <p><em>( ͡° ͜ʖ ͡°)</em></p>
                         <dl class="dl1">
-                            <dt><b>Bigots, antis, and minors will be blocked.</b></dt>
+                            <dt><b>Abusers, anti-shippers, bigots, and minors will be blocked.</b></dt>
                                     <dd>&nbsp; &nbsp; &nbsp; &nbsp;</dd>
                             <dt>Feel free to interact with my original tweets, but I tend to delete them randomly on a whim because I am 
                                 actually three snakes in a frock coat.</dt>
